[Payments] Use a square ratio for payment instruments that are not credit cards

In the Payment Request sheet, icons should show as square and not squashed.

Bug: 845929
Change-Id: I619f015d12e98d7cf8125a6cb8c99566e40f1d63
Reviewed-on: https://chromium-review.googlesource.com/1077450
Reviewed-by: Ganggui Tang <gogerald@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562798}
Former-commit-id: a2fafb96a5ee17ccb46dc192be927d6ece73da39